# ab-api-poc

./: .editorconfig  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml  poc.py
.env/: .env.dev  .env.test
.github/workflows/: playwright.yml  python-app.yml
api/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
api/app/: __init__.py  main.py  worker.py
api/app/db/: models.py  session.py
api/app/db/crud/: comic.py  user.py
api/app/routers/: auth.py  comic.py  recipes.py  users.py
api/app/utils/: config.py  generators.py  security.py
api/commands/: api
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 0969768baca1_.py  18b357773954_.py  238c17b8d352_.py
api/tests/: conftest.py  test_main.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  playwright.config.ts
frontend/src/: client.js  config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/auth/[...nextauth]/: route.ts
frontend/src/app/comic/[id]/: page.tsx
frontend/src/app/components/: NextAuth.tsx  navigation.jsx
frontend/src/app/register/: page.jsx
