# Poetry

[tool.poetry]
name = "app"
version = "0.1.0"
description = "Archive Binge API"
authors = ["Madeleine Ethridge <madeleine.ethridge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^4.9.4"
python-multipart = "^0.0.6"
authlib = "^1.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
google-auth = "^2.26.2"
sqlmodel = "^0.0.14"
alembic = { extras = ["tz"], version = "^1.13.1" }
celery = { extras = ["redis"], version = "^5.3.6" }
pydantic-settings = "^2.1.0"

[tool.poetry.group.pytest.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.lint.dependencies]
black = "^23.12.1"
flake8 = "^6.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"

[tool.poetry.group.security.dependencies]
bandit = { extras = ["toml"], version = "^1.7.6" }
pip-audit = "^2.7.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.12.1"

[tool.poetry.group.coverage.dependencies]
coverage = "^7.4.0"

[tool.poetry.group.server.dependencies]
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool Configs

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B410", # https://github.com/PyCQA/bandit/issues/767
]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
lines_between_types = 1
profile = "black"
remove_redundant_aliases = true
#skip = ["migrations"]
wrap_length = 79

[tool.mypy]
#plugins = "sqlmypy"
#exclude = "migrations"
show_error_context = true
show_error_codes = true
strict = true

disallow_any_generics = false
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ['ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated']
env_files = [".env/.env.dev"]
