# Poetry

[tool.poetry]
name = "app"
version = "0.1.0"
description = "Archive Binge API"
authors = ["Madeleine Ethridge <madeleine.ethridge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
python-multipart = "^0.0.9"
authlib = "^1.3.0"
bcrypt = "^4.1.2"
google-auth = "^2.28.0"
sqlmodel = "^0.0.14"
alembic = { extras = ["tz"], version = "^1.13.1" }
celery = { extras = ["redis"], version = "^5.3.6" }
pydantic-settings = "^2.2.0"

[tool.poetry.group.pytest.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.5"
aiosqlite = "^0.19.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.lint.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"
celery-types = "^0.22.0"
types-requests = "^2.31.0.20240125"
lxml-stubs = "^0.5.1"
types-beautifulsoup4 = "^4.12.0.20240106"

[tool.poetry.group.security.dependencies]
bandit = { extras = ["toml"], version = "^1.7.7" }
pip-audit = "^2.7.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.13.0"

[tool.poetry.group.coverage.dependencies]
coverage = "^7.4.1"

[tool.poetry.group.server.dependencies]
uvicorn = { extras = ["standard"], version = "^0.27.1" }
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool Configs

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B410", # https://github.com/PyCQA/bandit/issues/767
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
packages = "app"
exclude = ["migrations", "tests"]
show_error_context = true
strict = true

[[tool.mypy.overrides]]
# These modules don't have mypy stubs
module = ["authlib.jose", "authlib.jose.errors"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ['ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated']
env_files = [".env/.env.dev"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["api/tests/*", "*__init__.py"]

[tool.coverage.report]
omit = ["api/tests/*", "*__init__.py"]
